# fsync

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  config.json.example  config.yml  config.yml.example  fsync.py  ftp-sync.py  mock_remote_lib.json  pyproject.toml  run_tests.sh
.github/workflows/: testing.yml  tests.yml
tests/: __init__.py  conftest.py  test_all.py  test_harness.py
