[project]
name = "fsync"
version = "0.1.1"
description = "fsync is a script that behaves like `rsync -a` over FTP."
readme = "README.md"
requires-python = ">=3.7,<=3.13"

[dependency-groups]
dev = [
    "attrs==22.2.0",
    "coverage==7.0.1",
    "exceptiongroup==1.1.0",
    "iniconfig==1.1.1",
    "packaging==22.0",
    "pluggy==1.0.0",
    "pytest==7.2.0",
    "tomli==2.0.1",
]
